--- a/package.json
+++ b/package.json
@@ -5,16 +5,19 @@
   "author": "Susie Coleman",
   "license": "GPL-3.0",
   "scripts": {
-    "dev-start": "ts-node-dev --respawn --transpileOnly ./src/server.ts",
+    "install:all": "yarn install && cd client && yarn install && cd ..",
     "start": "node ./dist/server.js",
-    "build": "tsc",
-    "client": "cd client && yarn start",
-    "dev": "concurrently --kill-others-on-fail \"yarn dev-start\" \"yarn client\""
+    "build:all": "yarn build:server && yarn build:client",
+    "build:client": "cd client && yarn build && cd ..",
+    "build:server": "tsc",
+    "start:client": "cd client && yarn start && cd ..",
+    "start:server": "ts-node-dev --respawn --transpileOnly ./src/server.ts",
+    "start:dev": "concurrently --kill-others-on-fail \"yarn start:server\" \"yarn start:client\""
   },
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "typescript": "^3.7.2"
+    "typescript": "^3.9.6"
   },
   "devDependencies": {
     "@types/express": "^4.17.2",
