--- a/package.json
+++ b/package.json
@@ -15,7 +15,12 @@
     "start:dev": "concurrently --kill-others-on-fail \"yarn start:server\" \"yarn start:client\""
   },
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.1.0",
+    "@typescript-eslint/parser": "^4.1.0",
     "body-parser": "^1.19.0",
+    "eslint": "^6.6.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "express": "^4.17.1",
     "typescript": "^3.9.6"
   },
