--- a/.gitignore
+++ b/.gitignore
@@ -7,12 +7,15 @@ dist
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 .vs_code
 
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+*.log
