--- a/package.json
+++ b/package.json
@@ -6,32 +6,35 @@
   "license": "GPL-3.0",
   "scripts": {
     "install:all": "yarn install && cd client && yarn install && cd ..",
-    "start": "node ./dist/server.js",
+    "start": "NODE_ENV=production node ./dist/server.js",
     "build:all": "yarn build:server && yarn build:client",
     "build:client": "cd client && yarn build && cd ..",
     "build:server": "tsc",
     "start:client": "cd client && yarn start && cd ..",
-    "start:server": "ts-node-dev --respawn --transpileOnly ./src/server.ts",
+    "start:server": "ts-node-dev ./src/server.ts --respawn --transpileOnly",
     "start:dev": "concurrently --kill-others-on-fail \"yarn start:server\" \"yarn start:client\"",
     "test": "jest test"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.2",
     "@types/jest": "^26.0.13",
+    "@types/node": "^14.10.1",
     "@typescript-eslint/eslint-plugin": "^4.1.0",
     "@typescript-eslint/parser": "^4.1.0",
     "concurrently": "^5.0.0",
     "eslint": "^6.6.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "jest": "^26.4.2",
+    "jest": "^24.9.0",
     "prettier": "^1.18.2",
-    "ts-jest": "^26.3.0",
-    "ts-node-dev": "^1.0.0-pre.44",
+    "ts-jest": "^24.3.0",
+    "ts-node-dev": "^1.0.0-pre.62",
     "typescript": "^3.9.6"
   }
 }
