--- a/package.json
+++ b/package.json
@@ -19,12 +19,16 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "winston": "^3.3.3"
+    "swagger-ui-express": "^4.1.4",
+    "winston": "^3.3.3",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.2",
     "@types/jest": "^26.0.13",
     "@types/node": "^14.10.1",
+    "@types/swagger-ui-express": "^4.1.2",
+    "@types/yamljs": "^0.2.31",
     "@typescript-eslint/eslint-plugin": "^4.1.0",
     "@typescript-eslint/parser": "^4.1.0",
     "concurrently": "^5.0.0",
